# fast-cpp-logger

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: benchmark.hpp  logger.hpp  ring_buffer.hpp  sink.hpp  writer.hpp
src/: benchmark.cpp  logger.cpp  main.cpp
tests/: CMakeLists.txt  test_logger.cpp  test_ring_buffer.cpp  test_writer.cpp
